added Models, Views, and Controllers folders to start setting up MVCarchitecture

--- a/src/Views/sentiment.html
+++ b/src/Views/sentiment.html
@@ -4,7 +4,7 @@
 
         <title>Sentiment Analyzer</title>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="CSS.css"> 
+        <link rel="stylesheet" type="text/css" href="style.css"> 
         
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<title>Sentiment Analyzer</title>
@@ -21,7 +21,7 @@
                  var settings = {
                  "async": true,
                  "crossDomain": true,
-                 "url": "https://westcentralus.api.cognitive.microsoft.com/text/analytics/v2.1/sentiment",
+                 "url": "https://westus.api.cognitive.microsoft.com/text/analytics/v2.1/sentiment",
                  "method": "POST",
                  "headers": {
                      "Ocp-Apim-Subscription-Key": "4230848ace634dd7840de696b837da85",
