--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,8 +43,9 @@
     <div class="col-sm-6 col-sm-offset-3">
         <h1>results</h1>
         <p>
-            <strong>sentiment</strong>: <%= sentiment %><br>
-            <strong>tags</strong>:<%= tags %><br>
+            <strong>sentiment score</strong>: <%= sentiment %><br>
+            <strong>image tags</strong>: <%= tags %><br>
+            <strong>image caption</strong>: <%= caption%><br>
         </p>
     </div>
     <div class="row">
